Cleanup the build from unused parameter in UIProcess Module https://bugs.webkit.org/show_bug.cgi?id=131969

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2014-05-07
Reviewed by Csaba Osztrogonác.

Fixed unused parameter by omitting the parameter name

* UIProcess/API/C/WKPage.cpp:
(WKPageSetPageFindClient):
* UIProcess/WebFindClient.cpp:
(WebKit::WebFindClient::didFindString):

Canonical link: https://commits.webkit.org/150688@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168419 268f45cc-cd09-0410-ab3c-d52691b4dbfc